Fix very small but very big naming mistake
Signed-off-by: snoj <josh@snoj.us>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "donedone",
   "version": "0.0.1",
-  "description": "Downdown is meant for instances where complex chains or an unknown number of events need to be completed.",
+  "description": "Donedone is meant for instances where complex chains or an unknown number of events need to be completed.",
   "main": "index.js",
   "directories": {
     "test": "tests"
@@ -12,6 +12,11 @@
     "event",
     "completion"
   ],
+  "repository" :
+  {
+    "type" : "git"
+    , "url" : "http://github.com/snoj/donedone.git"
+  },
   "author": "Josh Erickson",
   "license": "MIT"
 }
